Fix hero title spacing

--- a/src/nationalarchives/components/hero/_index.scss
+++ b/src/nationalarchives/components/hero/_index.scss
@@ -96,6 +96,7 @@
   }
 
   &__body {
+    margin-top: 1.5rem;
   }
 
   @include media.on-mobile {
